--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
+<!DOCTYPE html> 
 <html>
     <head>
-    
+        <link rel="stylesheet" href="css/app.css">
+        <link rel="stylesheet" href="css/normalize.css">
     <head>
         <body>
             <header>
@@ -8,15 +10,21 @@
                     <img src="fbIcon.png"></img>
                 </a>
                 <nav>
-                    <ul>
+                    <ul id="top_banner">
                         <li><a href="profile.html"></a>Profile</li>
-                        <li><a href="profile.html"></a>Home</li>
+                        <li><a href="index.html"></a>Home</li>
                         <li><a href="profile.html"></a>Create</li>
-                        <li><a href="profile.html"></a><img src="requests.png"></img></li>
-                        <li><a href="profile.html"></a></li>
+                        <li><a href="requests.html"></a><img src="requests.png"></img></li>
+                        <li><a href="chat.html"></a><img src="chat.png"></img></li>
+                        <li><a href="notifications.html"></a><img src="notifications.png"></img></li>
+                        <li><a href="help.html"></a><img src="help.png"></img></li>
+                        <li>menu arrow</li>
                     </ul>
                 </nav>
             </header>
+            <div id="wrapper">
+                <p>content</p>
+            </div>
         </body>
         <footer> 2018 </footer>
 </html>
