added icons from flaticon and attribution links at the bottom

--- a/index.html
+++ b/index.html
@@ -11,14 +11,40 @@
                 </a>
                 <nav>
                     <ul id="top_banner">
-                        <li><a href="profile.html"></a>Profile</li>
-                        <li><a href="index.html"></a>Home</li>
-                        <li><a href="profile.html"></a>Create</li>
-                        <li><a href="requests.html"></a><img src="requests.png"></img></li>
-                        <li><a href="chat.html"></a><img src="chat.png"></img></li>
-                        <li><a href="notifications.html"></a><img src="notifications.png"></img></li>
-                        <li><a href="help.html"></a><img src="help.png"></img></li>
-                        <li>menu arrow</li>
+                        <li>
+                            <a href="profile.html">Profile</a>
+                        </li>
+                        <li>
+                            <a href="index.html">Home</a>
+                        </li>
+                        <li>
+                            <a href="#">Create</a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <img src="requests.png"></img>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <img src="chat.png"></img>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <img src="notifications.png"></img>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <img src="help.png"></img>
+                            </a>
+                        </li>
+                        <li>                            
+                            <a href="#">
+
+                            </a>
+                        </li>
                     </ul>
                 </nav>
             </header>
@@ -26,5 +52,16 @@
                 <p>content</p>
             </div>
         </body>
-        <footer> 2018 </footer>
+        <footer> 2018 
+                <div>Icons made by 
+                    <a href="http://www.freepik.com/" title="Freepik">Freepik</a> 
+                    from 
+                    <a href="https://www.flaticon.com/" title="Flaticon">
+                        www.flaticon.com
+                    </a> is licensed by 
+                    <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">
+                        CC 3.0 BY
+                    </a>
+                </div>
+        </footer>
 </html>
