--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <head>
         <body>
             <header>
-                <a href="index.html" id="fbIcon">
-                    <img src="fbIcon.png"></img>
+                <a href="#" id="fbIcon">
+                    <img id="icon" src="img/facebook-app-logo.png"></img>
                 </a>
                 <nav>
                     <ul id="top_banner">
                         <li>
-                            <a href="profile.html">Profile</a>
+                            <a href="content/profile.html">Profile</a>
                         </li>
                         <li>
                             <a href="index.html">Home</a>
@@ -22,34 +22,37 @@
                         </li>
                         <li>
                             <a href="#">
-                                <img src="requests.png"></img>
+                                <img id="icon" src="img/man-and-woman-avatar.png"></img>
                             </a>
                         </li>
                         <li>
                             <a href="#">
-                                <img src="chat.png"></img>
+                                <img id="icon" src="img/conversation-with-text-lines.png"></img>
                             </a>
                         </li>
                         <li>
                             <a href="#">
-                                <img src="notifications.png"></img>
+                                <img id="icon" src="img/loudspeaker-with-sound-waves.png"></img>
                             </a>
                         </li>
                         <li>
                             <a href="#">
-                                <img src="help.png"></img>
+                                <img id="icon" src="img/file-with-lock.png"></img>
                             </a>
                         </li>
                         <li>                            
                             <a href="#">
-
+                                arrow up
                             </a>
                         </li>
                     </ul>
                 </nav>
             </header>
             <div id="wrapper">
+                <p>side bar</p>
                 <p>content</p>
+                <p>content</p>
+                <p>chat</p>
             </div>
         </body>
         <footer> 2018 
