added styling to the header and nav

--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
                 <a href="#" id="fbIcon">
                     <img id="icon" src="img/facebook-app-logo.png"></img>
                 </a>
+                <form>
+                    <input type="text" name="Search" value="Search" onsSubmit="show_alert();">
+                </form>
                 <nav>
-                    <ul id="top_banner">
+                    <ul>
                         <li>
                             <a href="content/profile.html">Profile</a>
                         </li>
